# lakeview

./: .README.md  .gitignore  .gitpod.Dockerfile  .gitpod.yml  MANIFEST.in  README.md  environment.yml  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh  post_create.sh  post_start.sh
.github/workflows/: deploy_docs.yml  github_pages.yml  lint_with_flake8.yml  pypi_publish.yml  python-package-conda.yml  run_pytest.yml  test_pip.yml  type_check_with_mypy.yml
dev/: requirements.txt
dev/jupyterlab_settings/: overrides.json
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/api/: GeneAnnotation.rst  GenomeViewer.rst  SequenceAlignment.rst  index.rst  plot.rst  region_notation.rst  remote.rst  type_alias.rst
docs/examples/HG002_GNAS_WES/: HG002_GNAS_WES.py.ipynb  HG002_GNAS_WES.py.ipynb.html
docs/examples/HG002_IGH/: HG002_IGH.py.ipynb  HG002_IGH.py.ipynb.html
docs/examples/HG002_PacBio_methylation/: HG002_PacBio_methylation.py.ipynb
docs/examples/IGH_dot_plot/: IGH_dot_plot.py.ipynb  IGH_dot_plot.py.ipynb.html
docs/examples/Iso-Seq/: Iso-Seq.py.ipynb  test.sam
docs/examples/NA12878_RNAseq/: GM12878_RNAseq_GAPDH.bam.bai  GM12878_RNAseq_GAPDH.sample=0.002.bam  GM12878_RNAseq_GAPDH.sample=0.002.bam.bai  NA12878_RNAseq.py.ipynb
docs/examples/SKBR3/: SKBR3.py.ipynb  (+1 more)
docs/gallery/: Exome.ipynb  GAPDH.ipynb  IGH.ipynb  SKBR3.ipynb  SNURF.ipynb  index.rst  logo.ipynb
docs/tutorials/: custom_layout.ipynb  custom_layout.rst  genome_viewer.ipynb  index.rst  quick_start.ipynb
docs/usage/: HG002_IGH.ipynb  SKBR3.ipynb  index.rst  region.rst  test.ipynb
src/lakeview/: __init__.py  _custom_types.py  _layout.py  _region_notation.py  _region_string.py  _type_alias.py  alignment.py  annotation.py  core.py  custom_types.py  helpers.py  plot.py  region_notation.py  remote.py  sequence.py  sequences.py  util.py  widget.py  wiggle.py
tests/: doc_test.py  integration_test.py  unit_test.py
tests/data/: HG002_GNAS_Illumina_WES.bam  HG002_GNAS_Illumina_WES.bam.bai  HG002_GRCh38_SNURF_haplotagged.bam  HG002_GRCh38_SNURF_haplotagged.bam.bai  HG002_IGH_PacBio_CCS.bam.bai  SKBR3_Illumina_550bp_pcrFREE.bam  SKBR3_Illumina_550bp_pcrFREE.bam.bai  SKBR3_PacBio.bam  SKBR3_PacBio.bam.bai
(+10 files in other folders)
