[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeview"
description = "A Python library for creating publication-quality genome visualisations."
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.7"
keywords = ["bioinformatics", "genomics", "visualisation"]
license = {text = "GNU GENERAL PUBLIC LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Bio >= 1.79",
    "IPython >= 8.5.0",
    "ipywidgets >= 8.0.3",
    "matplotlib >= 3.6.2",
    "pysam >= 0.20.0",
]